# loudnes

./: .gitignore  README.md
LoudNES/: CMakeLists.txt  ChannelSwitchControl.h  DpcmEditorControl.h  KnobControl.h  LoudNES.RPP  LoudNES.cpp  LoudNES.h  LoudNES.sln  LoudNES_DSP.h  NesApu.h  NesChannel.h  NesDpcm.h  NesEnvelope.h  NesVoice.h  README.md  SpinnerControl.h  StepSequencer.h  config.h
LoudNES/LoudNES.xcworkspace/: contents.xcworkspacedata
LoudNES/NesSndEmu/: Simple_Apu.h  SndEmu.vcxproj
LoudNES/NesSndEmu/nes_apu/: Nes_Mmc5.cpp  Nes_Sunsoft.cpp  Nes_Vrc7.cpp
LoudNES/config/: LoudNES-ios.xcconfig  LoudNES-mac.xcconfig  LoudNES-web.mk  LoudNES-win.props
LoudNES/installer/: LoudNES.iss  LoudNES.pkgproj  known-issues.txt  license.rtf  readme-osx.rtf  readme-win.rtf
LoudNES/projects/: LoudNES-aax.vcxproj  LoudNES-aax.vcxproj.filters  LoudNES-app.vcxproj  LoudNES-app.vcxproj.filters  LoudNES-vst2.vcxproj  LoudNES-vst2.vcxproj.filters  LoudNES-vst3.vcxproj  LoudNES-vst3.vcxproj.filters  LoudNES-wam-controller.mk  LoudNES-wam-processor.mk
LoudNES/projects/LoudNES-iOS.xcodeproj/: project.pbxproj
LoudNES/projects/LoudNES-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
LoudNES/projects/LoudNES-macOS.xcodeproj/: project.pbxproj
LoudNES/projects/LoudNES-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  VST3 Controller Library.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-VST2.xcscheme  macOS-VST3 (Distributed).xcscheme  macOS-VST3.xcscheme
LoudNES/resources/: IPlugAUViewController.xib  LoudNES-AAX-Info.plist  LoudNES-AU-Info.plist  LoudNES-Pages.xml  LoudNES-VST2-Info.plist  LoudNES-VST3-Info.plist  LoudNES-iOS-AUv3-Info.plist  LoudNES-iOS-Info.plist  LoudNES-iOS-launchScreen.storyboard  LoudNES-macOS-AUv3-Info.plist  LoudNES-macOS-AUv3Framework-Info.plist  LoudNES-macOS-Info.plist  LoudNES-macOS-MainMenu.xib  main.rc  main.rc_mac_dlg
LoudNES/resources/fonts/: README.md
LoudNES/scripts/: make_zip.py  makedist-mac.sh  makedist-web.sh  makedist-win.bat  prepare_resources-ios.py  prepare_resources-mac.py  update_installer_version.py  update_version.py
